# xlerobot-teleop

./: .env.example  Dockerfile.robot  Dockerfile.server  LICENSE  README.md  compose.robot.yml  compose.server.yml  compose.yml  pyproject.toml  turn.env  turnserver.conf
scripts/: generate_dev_cert.sh  obtain_ssl_cert.sh
server/: Dockerfile  README.md  main.py
server/src/camera/: __init__.py  video_track.py
server/src/robot/: cloud_publisher.py  config_xlerobot.py  controller.py  xlerobot.py
server/src/server/: cloud_server.py  server.py
src/camera/: list_cameras.py  video_track.py
src/robot/: base_robot.py  client.py  config_xlerobot.py  controller.py  utils.py  xlerobot.py
src/server/: __init__.py  server.py
src/server/static/: index.html  joycon.js  login.html
web/: package.json
